--- a/src/main/webapp/WEB-INF/databaseSettings.properties
+++ b/src/main/webapp/WEB-INF/databaseSettings.properties
@@ -1,4 +1,4 @@
 database.driverClassName=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/cumpelstore
+database.url=jdbc:mysql://localhost:3306/cumpelstore?useLegacyDatetimeCode=false
 database.user=root
 database.password=
