--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,13 @@
             <version>${spring.security.version}</version>
         </dependency>
 
+        <!-- MAIL -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
