--- a/src/main/webapp/WEB-INF/databaseSettings.properties
+++ b/src/main/webapp/WEB-INF/databaseSettings.properties
@@ -1,4 +1,4 @@
 database.driverClassName=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/cumpelstore?useLegacyDatetimeCode=false
+database.url=jdbc:mysql://localhost:3306/cumpelstore?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull
 database.user=root
 database.password=
